Bug 1396974: stop bundeling inactive m-sections. r=bwc

MozReview-Commit-ID: AXBtipHlW0Y

--HG--
extra : rebase_source : c1cf7cd11896a757472b47ccf8810cfca7c413d1